<resources>
    <string name="app_name">Cards</string>
    <string name="question_text">Tree</string>
    <string name="answer_button_text">Check answer</string>
    <string name="answer_text">Arbol</string>
    <string name="easy_button_title">Easy</string>
    <string name="doubt_button_title">Medium</string>
    <string name="difficult_button_title">Hard</string>
    <string name="No_cards">No cards avaiable</string>
    <string name="cards_left_format"> %d cards available</string>
    <string name="subtitle_text">Touch to study</string>
    <string name="buttonQuestion">STUDY</string>
    <string name="showMore">Show More</string>
    <string name="showLess">Show Less</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="acceptButton">Accept</string>
    <string name="cancelButton">Cancel</string>
    <string name="card_question_hint">Write here the question</string>
    <string name="card_answer_hint">Write here the answer</string>
    <string name="decks_nav_menu_title">Bunchs</string>
    <string name="study_nav_menu_title">Study</string>
    <string name="statistics_nav_menu_title">Statistics</string>
    <string name="show_cards_of_deck">Show decks cards</string>
    <string name="authorname">Franccy del Piero Sambrano Ganoza</string>
    <string name="description">This application was created follow Encode instructions. His functioning is very sample. When you enter to application if you displace to rigth  you find a penel whose function is navigaate around all the functionality </string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="decks_header">Decks</string>

    <!-- Maximum number of cards Preferences -->
    <string name="max_number_cards">Maximum number of cards</string>

    <!-- Board Preferences -->
    <string name="board_title">Show board</string>
    <string name="board_summary_on">Board available</string>
    <string name="board_summary_off">Board unavailable</string>
</resources>