<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@id/cardListFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_list_alt_24_foreground"
        android:title="@string/decks_nav_menu_title"/>
    <item
        android:id="@id/studyFragment2"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_play_circle_filled_24_foreground"
        android:title="@string/study_nav_menu_title"/>
    <item
        android:id="@+id/statisticsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_assessment_24_foreground"
        android:title="@string/statistics_nav_menu_title"/>

    <item
        android:id="@+id/aboutFragment"
        android:enabled="true"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="Acerca de la APP"/>
</menu>