<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="studyViewModel"
            type="es.uam.eps.dadm.cards.StudyViewModel" />
    </data>

    <RelativeLayout
        android:visibility="@{studyViewModel.card  == null ?View.INVISIBLE : View.VISIBLE}"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/question_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="20dp"
            android:text="@{studyViewModel.card.question}"
            android:visibility="@{studyViewModel.card.answered ? View.VISIBLE : View.VISIBLE}"
            tools:text="Texto para el entorno"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/info_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="20dp"
            android:text="@{@string/cards_left_format(studyViewModel.cardsLeft)}"
            tools:text="Número de tarjetas restantes" />


        <TextView
            android:id="@+id/answer_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/question_text_view"
            android:layout_centerHorizontal="true"
            android:textSize="20dp"
            android:visibility="@{studyViewModel.card.answered ? View.VISIBLE : View.INVISIBLE}"
            android:text="@{studyViewModel.card.answer}"
            tools:text="Respuesta para el entorno"/>

        <Button
            android:id="@+id/answer_button"
            android:layout_below="@id/answer_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{studyViewModel.card.answered ? View.INVISIBLE : View.VISIBLE}"
            android:text="@string/answer_button_text" />

        <View
            android:id="@+id/separator_view"
            android:layout_below="@id/question_text_view"
            android:layout_width="match_parent"
            android:layout_marginVertical="3dp"
            android:layout_marginHorizontal="30dp"
            android:layout_height="1dp"
            android:visibility="@{studyViewModel.card.answered ? View.VISIBLE : View.INVISIBLE}"
            android:background="@android:color/darker_gray"/>

        <LinearLayout

            android:id="@+id/difficultyButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:visibility="@{studyViewModel.card.answered ? View.VISIBLE : View.INVISIBLE}"
            android:gravity="center">

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/acceptCancelButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:id="@+id/difficultButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/difficult_button_title"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:textColor="@android:color/holo_red_light">
                </Button>

                <Button
                    android:id="@+id/doubtButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/doubt_button_title"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:textColor="@android:color/holo_blue_light">
                </Button>

                <Button
                    android:id="@+id/easyButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/easy_button_title"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:textColor="@android:color/holo_green_light">
                </Button>


            </com.google.android.material.button.MaterialButtonToggleGroup>


        </LinearLayout>

    </RelativeLayout>



</layout>
